tests/paczka1/fuzzy1/41144460.err
Error in line 5: YwRNy8 S141 4,84
Error in line 6: NJPEdLM S141 9,6
Error in line 2: TswX A684 81,4
Error in line 22: yk346ng7L3 A74 73,3
Error in line 19: tHD0E89C9tT A547 63,9
Error in line 30: tHD0E89C9tT A684 56,7
Error in line 37: NJPEdLM A547 57,3
